--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ permalink: /posts/:title.html
 exclude:
   - README.md
 
-name: Your Name's Site
-host: localhost
+name: ooyyloo
+host: ooyyloo.github.io
 desc: Some description of your site.
 
 custom:
@@ -22,7 +22,7 @@ custom:
 
 meta:
     author:
-        name: Your Name
+        name: ooyyloo
         email: your-email@example.com
         disqus: your-disqus-short-name              # Disqus缩略标识
         gcse: 000346898720731947188:13h55x32l0y     # Google自定义搜索标识ID
