--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ exclude:
 
 name: ooyyloo
 host: ooyyloo.github.io
-desc: Some description of your site.
+desc: This is my site.
 
 custom:
     category:
@@ -23,12 +23,12 @@ custom:
 meta:
     author:
         name: ooyyloo
-        email: your-email@example.com
+        email: 806470946@qq.com
         disqus: your-disqus-short-name              # Disqus缩略标识
         gcse: 000346898720731947188:13h55x32l0y     # Google自定义搜索标识ID
-        github: your-github-account                 # GitHub账号
-        gravatar: 1cd8c12591616d8c22aaa624f8c07834  # Gravatar头像标识
+        github: ooyyloo                             # GitHub账号
+        #gravatar: 1cd8c12591616d8c22aaa624f8c07834  # Gravatar头像标识
 
     disqus: disqus.com/embed.js                     # Disqus评论的JS地址
     gapi: http://www.google.com/jsapi               # Google API地址
-    gravatar: http://en.gravatar.com/avatar/        # Gravatar头像服务器地址
+    #gravatar: http://en.gravatar.com/avatar/        # Gravatar头像服务器地址
